[package]
name = "specs-hierarchy"
version = "0.3.1"
authors = ["Aceeri <conmcclusk@gmail.com>", "Rhuagh <seamonr@gmail.com>"]
repository = "https://github.com/rustgd/specs-hierarchy.git"
homepage = "https://github.com/rustgd/specs-hierarchy.git"

license = "MIT/Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/specs-hierarchy"
description = "Scene graph type hierarchy abstraction for use with specs"

keywords = ["specs", "scenegraph", "hierarchy"]

[dependencies]
hibitset = { version = "0.5", default-features = false }
specs = { version = "0.14", default-features = false }
shred = { version = "0.7", default-features = false }
shrev = "1.0"
shred-derive = "0.5"

[features]
default = ["parallel"]
parallel = ["specs/parallel", "shred/parallel", "hibitset/parallel"]
nightly = ["specs/nightly", "shred/nightly"]