[package]
name = "specs-hierarchy"
version = "0.6.0"
authors = ["Aceeri <conmcclusk@gmail.com>", "Rhuagh <seamonr@gmail.com>"]
repository = "https://github.com/rustgd/specs-hierarchy.git"
homepage = "https://github.com/rustgd/specs-hierarchy.git"

license = "MIT/Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/specs-hierarchy"
description = "Scene graph type hierarchy abstraction for use with specs"

keywords = ["specs", "scenegraph", "hierarchy"]

[dependencies]
hibitset = { version = "0.6.2", default-features = false }
specs = { version = "0.16.0", default-features = false, features = ["shred-derive"] }
shrev = "1.1.1"

[features]
default = ["parallel"]
parallel = ["specs/parallel", "hibitset/parallel"]
